OSSM/1_32/must-gather.local.3859268501405119422/registry-redhat-io-openshift-service-mesh-istio-must-gather-rhel8-sha256-4d59bccd930a20d3ef173ce3b67824c13e4a552054077134140a87f49a661feb/namespaces/istio-system/networking.istio.io/destinationrules/default.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"networking.istio.io/v1beta1","kind":"DestinationRule","metadata":{"annotations":{"maistra.io/mesh-generation":"2.5.1-1-2"},"labels":{"app":"istio","app.kubernetes.io/component":"mesh-config","app.kubernetes.io/instance":"istio-system","app.kubernetes.io/managed-by":"maistra-istio-operator","app.kubernetes.io/name":"mesh-config","app.kubernetes.io/part-of":"istio","app.kubernetes.io/version":"2.5.1-1-2","maistra-version":"2.4.7","maistra.io/owner":"istio-system","maistra.io/o [...]
    maistra.io/mesh-generation: 2.5.1-1-2
  creationTimestamp: "2024-06-05T10:45:55Z"
  generation: 1
  labels:
    app: istio
    app.kubernetes.io/component: mesh-config
    app.kubernetes.io/instance: istio-system
    app.kubernetes.io/managed-by: maistra-istio-operator
    app.kubernetes.io/name: mesh-config
    app.kubernetes.io/part-of: istio
    app.kubernetes.io/version: 2.5.1-1-2
    maistra-version: 2.4.7
    maistra.io/owner: istio-system
    maistra.io/owner-name: basic
    release: istio
  managedFields:
  - apiVersion: networking.istio.io/v1beta1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:kubectl.kubernetes.io/last-applied-configuration: {}
          f:maistra.io/mesh-generation: {}
        f:labels:
          .: {}
          f:app: {}
          f:app.kubernetes.io/component: {}
          f:app.kubernetes.io/instance: {}
          f:app.kubernetes.io/managed-by: {}
          f:app.kubernetes.io/name: {}
          f:app.kubernetes.io/part-of: {}
          f:app.kubernetes.io/version: {}
          f:maistra-version: {}
          f:maistra.io/owner: {}
          f:maistra.io/owner-name: {}
          f:release: {}
        f:ownerReferences:
          .: {}
          k:{"uid":"b5faf99f-8aeb-4477-aa3e-3f2e4796ec3c"}: {}
      f:spec:
        .: {}
        f:host: {}
        f:trafficPolicy:
          .: {}
          f:tls:
            .: {}
            f:mode: {}
    manager: istio-operator
    operation: Update
    time: "2024-06-05T10:45:55Z"
  name: default
  namespace: istio-system
  ownerReferences:
  - apiVersion: maistra.io/v2
    blockOwnerDeletion: true
    controller: true
    kind: ServiceMeshControlPlane
    name: basic
    uid: b5faf99f-8aeb-4477-aa3e-3f2e4796ec3c
  resourceVersion: "35331"
  uid: 482eabfe-8448-4193-94b0-24336a407430
spec:
  host: '*.cluster.local'
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
